update idl for discord and app, major front end progress for wallet connection and interaction

--- a/app/src/custom-styles.less
+++ b/app/src/custom-styles.less
@@ -1,1 +1,19 @@
 @import '~antd/dist/antd.dark.less';
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
+html,
+body .ant-layout {
+  background-color: rgb(34, 36, 45);
+  height: 100vh;
+  width: 100vw;
+}
+
+body {
+  font-family: 'Nunito', sans-serif;
+}
+
+span.ant-comment-content-author-name {
+  color: white;
+  font-weight: bold;
+  font-size: 1.2em;
+}
