fix less and custom styles loader for webpack

--- a/app/styles/custom-styles.less
+++ b/app/styles/custom-styles.less
@@ -1,3 +1,5 @@
+@import '~antd/dist/antd.dark.less';
+
 html,
 body .ant-layout {
   background-color: rgb(34, 36, 45);
@@ -9,7 +11,7 @@ body {
   font-family: 'Nunito', sans-serif;
 }
 
-span.ant-comment-content-author-name {
+.ant-comment-content-author-name {
   color: white;
   font-weight: bold;
   font-size: 1.2em;
