add basic discord oauth login

--- a/app/styles/custom-styles.less
+++ b/app/styles/custom-styles.less
@@ -18,5 +18,10 @@ body {
 }
 
 #wallet-btn-icon {
-  margin-right: 10;
+  margin-right: 10px !important;
+}
+
+#discord-btn-icon {
+  margin-right: 10px;
+  margin-bottom: 2px;
 }
